--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -9,45 +10,36 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
         body { font-family: 'Inter', sans-serif; background-color: #0f172a; color: white; }
-        .product-card { background: #1e293b; border-radius: 1.5rem; border: 1px solid #334155; transition: 0.3s; }
-        .product-card:hover { border-color: #fbbf24; }
+        .product-card { background: #1e293b; border-radius: 1rem; border: 1px solid #334155; height: 100%; display: flex; flex-direction: column; justify-content: space-between; }
     </style>
 </head>
-<body class="pb-40">
+<body class="pb-32">
 
-<header class="bg-slate-900/90 backdrop-blur-md sticky top-0 z-50 border-b border-slate-800 p-4">
-    <div class="container mx-auto">
-        <div class="flex justify-between items-center mb-4">
-            <div class="flex items-center gap-3">
-                <div class="bg-yellow-400 p-2 rounded-xl text-black shadow-lg"><i class="fas fa-bolt"></i></div>
-                <h1 class="text-xl font-black uppercase italic tracking-tighter">Trend <span class="text-yellow-500">Electro</span></h1>
-            </div>
-            <div class="bg-yellow-400 text-black px-4 py-1.5 rounded-full font-black text-sm shadow-lg">
-                <i class="fas fa-shopping-bag"></i> <span id="cartCount">0</span>
-            </div>
+<header class="bg-slate-900/95 sticky top-0 z-50 p-4 border-b border-slate-800">
+    <div class="container mx-auto flex justify-between items-center mb-4">
+        <div class="flex items-center gap-2">
+            <div class="bg-yellow-400 p-2 rounded-lg text-black"><i class="fas fa-bolt"></i></div>
+            <h1 class="text-xl font-black uppercase italic tracking-tighter">Trend <span class="text-yellow-500">Electro</span></h1>
         </div>
-        <input type="text" id="searchInput" oninput="render()" placeholder="Шукати за назвою або артикулом..." 
-               class="w-full bg-slate-800 border border-slate-700 rounded-xl py-3 px-4 text-sm outline-none focus:ring-2 focus:ring-yellow-400">
+        <div id="cartCount" class="bg-yellow-400 text-black px-4 py-1 rounded-full font-black text-xs">0</div>
+    </div>
+    <div class="container mx-auto">
+        <input type="text" id="searchInput" oninput="render()" placeholder="Пошук (артикул або назва)..." 
+               class="w-full bg-slate-800 border border-slate-700 rounded-xl py-3 px-4 text-white outline-none focus:ring-2 focus:ring-yellow-400">
     </div>
 </header>
 
 <main class="container mx-auto px-4 py-6">
-    <div id="loader" class="text-center py-20">
-        <div class="inline-block animate-spin text-yellow-400 text-5xl mb-4"><i class="fas fa-circle-notch"></i></div>
-        <p class="font-black text-slate-500 uppercase tracking-widest text-[10px]">Trend Electro Sync...</p>
+    <div id="loader" class="text-center py-10 text-slate-500 font-bold uppercase text-[10px] tracking-widest">
+        <i class="fas fa-sync animate-spin text-yellow-400 text-2xl mb-2"></i><br>Синхронізація з базою...
     </div>
-    <div id="grid" class="grid grid-cols-2 md:grid-cols-4 gap-4"></div>
+    <div id="grid" class="grid grid-cols-2 md:grid-cols-4 gap-3"></div>
 </main>
 
-<div id="orderBar" class="fixed bottom-0 left-0 right-0 bg-slate-900 p-6 shadow-2xl transform translate-y-full transition-all duration-500 z-50 border-t border-slate-800">
+<div id="orderBar" class="fixed bottom-0 left-0 right-0 bg-slate-900 p-6 border-t border-slate-800 transform translate-y-full transition-transform z-50">
     <div class="container mx-auto flex justify-between items-center">
-        <div>
-            <p class="text-[10px] font-black uppercase text-slate-400 italic">До сплати:</p>
-            <span id="finalSum" class="text-2xl font-black text-white italic">0 грн</span>
-        </div>
-        <button onclick="sendOrder()" class="bg-yellow-400 text-black px-8 py-4 rounded-2xl font-black text-sm active:scale-95 shadow-xl uppercase">
-            Замовити в Telegram
-        </button>
+        <div class="text-2xl font-black text-yellow-400 italic" id="finalSum">0 грн</div>
+        <button onclick="sendOrder()" class="bg-yellow-400 text-black px-8 py-3 rounded-xl font-black text-sm uppercase">Замовити</button>
     </div>
 </div>
 
@@ -55,65 +47,51 @@
     let products = [];
     let cart = {};
 
-    // --- НАЛАШТУВАННЯ ЦІНИ ---
-    const MARKUP = 1.0; // 1.0 = ціна як у файлі. 1.5 = +50%. Змінюй це число!
-
     async function loadData() {
         try {
-            const response = await fetch('data.csv?v=' + Date.now());
-            const text = await response.text();
-            const rows = text.split('\n').filter(row => row.trim() !== "");
+            const res = await fetch('data.csv?v=' + Date.now());
+            const text = await res.text();
+            // Розбиваємо на рядки та чистимо від порожніх
+            const lines = text.split(/\r?\n/).filter(l => l.trim().length > 2);
 
-            products = rows.map((row, index) => {
-                if (index === 0) return null; // ігноруємо шапку
+            products = lines.map((line, index) => {
+                if (index === 0) return null; // пропускаємо шапку
 
-                // РОЗУМНИЙ ПАРСИНГ:
-                const parts = row.split(',');
+                const parts = line.split(',');
                 if (parts.length < 2) return null;
 
-                // Ціна — це ЗАВЖДИ останній елемент
-                const rawPrice = parts[parts.length - 1].replace(/[^0-9.]/g, '');
-                const priceBase = parseFloat(rawPrice);
-
-                // Артикул — перший елемент
+                // Беремо останній елемент як ціну, все інше — як назву
+                const priceValue = parseFloat(parts[parts.length - 1].replace(/[^0-9.]/g, ''));
                 const sku = parts[0].trim();
+                const name = parts.slice(1, -1).join(' ').replace(/,/g, '').trim();
 
-                // Назва — все, що між першим і останнім елементом (включаючи коми)
-                const name = parts.slice(1, -1).join(', ').trim() || parts[1];
+                if (isNaN(priceValue)) return null;
 
-                if (isNaN(priceBase)) return null;
-
-                return { id: index, sku, name, basePrice: priceBase };
+                return { id: index, sku, name, price: priceValue };
             }).filter(p => p !== null);
 
-            document.getElementById('loader').classList.add('hidden');
+            document.getElementById('loader').style.display = 'none';
             render();
         } catch (e) {
-            document.getElementById('loader').innerHTML = "<p class='text-red-500'>Помилка завантаження бази!</p>";
+            document.getElementById('loader').innerHTML = "Помилка завантаження бази.";
         }
     }
 
     function render() {
-        const query = document.getElementById('searchInput').value.toLowerCase();
-        const grid = document.getElementById('grid');
-        
-        const filtered = products.filter(p => 
-            p.name.toLowerCase().includes(query) || p.sku.toLowerCase().includes(query)
-        );
+        const q = document.getElementById('searchInput').value.toLowerCase();
+        const filtered = products.filter(p => p.name.toLowerCase().includes(q) || p.sku.toLowerCase().includes(q));
 
-        grid.innerHTML = filtered.map(p => {
-            const displayPrice = Math.round(p.basePrice * MARKUP);
+        document.getElementById('grid').innerHTML = filtered.map(p => {
+            const finalPrice = Math.round(p.price * 1.5); // Націнка 50%
             return `
-                <div class="product-card p-4 flex flex-col justify-between">
+                <div class="product-card p-3">
                     <div>
-                        <div class="text-[9px] font-bold text-slate-500 mb-1 uppercase tracking-tighter">${p.sku}</div>
-                        <h3 class="font-bold text-[11px] leading-tight text-white line-clamp-3 mb-4 italic">${p.name}</h3>
+                        <div class="text-[8px] text-slate-500 font-bold uppercase mb-1">${p.sku}</div>
+                        <div class="text-[10px] font-bold leading-tight line-clamp-3 text-slate-100 italic">${p.name}</div>
                     </div>
-                    <div class="pt-3 border-t border-slate-700">
-                        <div class="text-xl font-black italic text-yellow-400 mb-3">${displayPrice} <small class="text-[9px] not-italic text-white">грн</small></div>
-                        <button onclick="addToCart(${p.id})" class="w-full bg-yellow-400 text-black py-2 rounded-xl text-[10px] font-black active:scale-95 transition-all uppercase">
-                            В кошик
-                        </button>
+                    <div class="pt-3">
+                        <div class="text-lg font-black text-yellow-400 italic mb-2">${finalPrice} <span class="text-[10px] text-white">грн</span></div>
+                        <button onclick="addToCart(${p.id})" class="w-full bg-slate-700 py-2 rounded-lg text-[9px] font-black hover:bg-yellow-400 hover:text-black">В КОШИК</button>
                     </div>
                 </div>
             `;
@@ -128,25 +106,25 @@
     function updateUI() {
         let count = 0, total = 0;
         for (let id in cart) {
-            const p = products.find(prod => prod.id == id);
+            const p = products.find(i => i.id == id);
             if (p) {
-                count += cart[id]; 
-                total += Math.round(p.basePrice * MARKUP) * cart[id];
+                count += cart[id];
+                total += Math.round(p.price * 1.5) * cart[id];
             }
         }
         document.getElementById('cartCount').innerText = count;
         document.getElementById('finalSum').innerText = total + ' грн';
-        document.getElementById('orderBar').classList.toggle('translate-y-full', count === 0);
+        document.getElementById('orderBar').style.transform = count > 0 ? 'translateY(0)' : 'translateY(100%)';
     }
 
     function sendOrder() {
-        let text = "Нове замовлення Trend Electro:%0A%0A";
+        let msg = "Trend Electro — Замовлення:%0A";
         for (let id in cart) {
-            const p = products.find(prod => prod.id == id);
-            text += `• ${p.sku} | ${p.name} — ${cart[id]} шт.%0A`;
+            const p = products.find(i => i.id == id);
+            msg += `• ${p.name} (${cart[id]}шт.)%0A`;
         }
-        text += `%0A💰 *РАЗОМ: ${document.getElementById('finalSum').innerText}*`;
-        window.open(`https://t.me/sviatko86?text=${text}`, '_blank');
+        msg += `%0A💰 РАЗОМ: ${document.getElementById('finalSum').innerText}`;
+        window.open(`https://t.me/sviatko86?text=${msg}`, '_blank');
     }
 
     window.onload = loadData;
