--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
 
     <div class="container mx-auto p-4 max-w-5xl">
         <div id="admin-panel" class="admin-only p-4 rounded-2xl mb-6 shadow-md text-sm text-yellow-800 font-bold">
-            ⚙️ АДМІН-ПАНЕЛЬ: НАЦІНКА +50% | ПАРОЛЬ: admin123
+            ⚙️ ПАНЕЛЬ КЕРУВАННЯ | ПАРОЛЬ: admin123
         </div>
 
         <div class="relative mb-6">
-            <input type="text" id="search" placeholder="Пошук товару або артикулу..." 
+            <input type="text" id="search" placeholder="Пошук за назвою або артикулом..." 
                 class="w-full p-4 pl-12 rounded-2xl border-none shadow focus:ring-4 focus:ring-yellow-300 transition text-lg">
             <i class="fas fa-search absolute left-4 top-5 text-gray-400"></i>
         </div>
 
-        <div id="cabinet" class="hidden bg-white p-6 rounded-2xl shadow-xl mb-6 border-l-8 border-yellow-500 animate-fade-in">
-            <h2 class="text-xl font-bold mb-4 text-gray-800">Контактні дані</h2>
+        <div id="cabinet" class="hidden bg-white p-6 rounded-2xl shadow-xl mb-6 border-l-8 border-yellow-500">
+            <h2 class="text-xl font-bold mb-4 text-gray-800">Дані для замовлення</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                <input type="text" id="user-name" placeholder="ПІБ / Назва компанії" class="p-3 bg-gray-100 rounded-xl border-none focus:ring-2 focus:ring-yellow-400">
-                <input type="text" id="user-phone" placeholder="Номер телефону" class="p-3 bg-gray-100 rounded-xl border-none focus:ring-2 focus:ring-yellow-400">
+                <input type="text" id="user-name" placeholder="Ваше Ім'я / Компанія" class="p-3 bg-gray-100 rounded-xl border-none">
+                <input type="text" id="user-phone" placeholder="Номер телефону" class="p-3 bg-gray-100 rounded-xl border-none">
             </div>
             <button onclick="saveProfile()" class="mt-4 bg-yellow-500 text-white font-bold py-2 px-8 rounded-xl hover:bg-yellow-600 transition">Зберегти</button>
         </div>
@@ -56,10 +56,10 @@
             <table class="w-full text-left">
                 <thead class="bg-gray-100 border-b">
                     <tr>
-                        <th class="p-4 text-xs text-gray-500">ФОТО</th>
-                        <th class="p-4 text-xs text-gray-500">ТОВАР</th>
-                        <th class="p-4 text-xs text-gray-500 text-right">ЦІНА (+50%)</th>
-                        <th class="p-4 text-xs text-gray-500 text-center">ЗАМОВИТИ</th>
+                        <th class="p-4 text-xs text-gray-500 font-bold uppercase">Фото</th>
+                        <th class="p-4 text-xs text-gray-500 font-bold uppercase">Товар</th>
+                        <th class="p-4 text-xs text-gray-500 font-bold uppercase text-right">Ціна (грн)</th>
+                        <th class="p-4 text-xs text-gray-500 font-bold uppercase text-center">Замовити</th>
                     </tr>
                 </thead>
                 <tbody id="product-list" class="divide-y"></tbody>
@@ -68,20 +68,20 @@
     </div>
 
     <div id="cart-modal" class="hidden fixed inset-0 bg-black/50 backdrop-blur-sm z-[100] flex justify-end transition-all">
-        <div class="bg-white w-full max-w-md h-full p-8 overflow-y-auto">
-            <div class="flex justify-between items-center mb-8 text-gray-800">
-                <h2 class="text-3xl font-black text-yellow-600">Кошик</h2>
+        <div class="bg-white w-full max-w-md h-full p-8 overflow-y-auto shadow-2xl">
+            <div class="flex justify-between items-center mb-8">
+                <h2 class="text-3xl font-black text-yellow-600 uppercase tracking-tighter">Кошик</h2>
                 <button onclick="toggleCart()" class="text-4xl text-gray-300 hover:text-gray-600">&times;</button>
             </div>
             <div id="cart-items" class="space-y-4"></div>
             <div class="mt-8 pt-6 border-t-2 border-gray-100">
-                <div class="flex justify-between text-lg text-gray-500"><span>Базова сума:</span><span id="total-price">0 грн</span></div>
+                <div class="flex justify-between text-lg text-gray-500 font-medium"><span>Сума замовлення:</span><span id="total-price">0 грн</span></div>
                 <div id="discount-info" class="text-green-600 font-bold text-sm mt-1"></div>
                 <div class="flex justify-between text-3xl font-black mt-4 text-red-600">
-                    <span>РАЗОМ:</span><span id="final-price">0 грн</span>
+                    <span>ВСЬОГО:</span><span id="final-price">0 грн</span>
                 </div>
-                <button onclick="checkout()" class="w-full bg-green-500 text-white py-5 rounded-2xl mt-8 font-black text-xl hover:bg-green-600 transition-all shadow-lg shadow-green-100 active:scale-95">
-                    ВІДПРАВИТИ ЗАМОВЛЕННЯ
+                <button onclick="checkout()" class="w-full bg-green-500 text-white py-5 rounded-2xl mt-8 font-black text-xl hover:bg-green-600 transition shadow-lg active:scale-95">
+                    ПІДТВЕРДИТИ ЗАМОВЛЕННЯ
                 </button>
             </div>
         </div>
@@ -102,12 +102,12 @@
                     const sku = parts[0].trim();
                     const rawPrice = parseFloat(parts[parts.length - 1]);
                     const name = parts.slice(1, -1).join(' ').replace(/"/g, '');
-                    const price = Math.round(rawPrice * 1.5); // Автоматична націнка +50%
+                    const price = Math.round(rawPrice * 1.5); // Націнка залишається, але напис прибрано
                     return { sku, name, price };
                 }).filter(p => p.sku && !isNaN(p.price));
                 renderProducts(products);
                 updateCartUI();
-            } catch (e) { console.error("Помилка завантаження бази даних!"); }
+            } catch (e) { console.error("База даних не завантажена"); }
         }
 
         function renderProducts(items) {
@@ -118,15 +118,15 @@
                         <img src="img/${p.sku}.jpg" onerror="this.src='https://via.placeholder.com/150?text=Trend'" class="product-img border shadow-sm">
                     </td>
                     <td class="p-4">
-                        <p class="text-[10px] text-gray-400 font-mono tracking-widest">${p.sku}</p>
+                        <p class="text-[10px] text-gray-400 font-mono tracking-widest uppercase">${p.sku}</p>
                         <p class="font-bold text-gray-800 leading-tight">${p.name}</p>
                     </td>
                     <td class="p-4 text-right font-black text-yellow-600 text-lg">${p.price}</td>
                     <td class="p-4">
                         <div class="flex items-center justify-center gap-2 bg-gray-100 rounded-full p-1 border">
-                            <button onclick="updateCart('${p.sku}', -1)" class="w-8 h-8 flex items-center justify-center bg-white rounded-full shadow-sm hover:text-red-500">-</button>
+                            <button onclick="updateCart('${p.sku}', -1)" class="w-8 h-8 flex items-center justify-center bg-white rounded-full shadow-sm">-</button>
                             <span id="qty-${p.sku}" class="font-bold w-6 text-center text-lg">${cart[p.sku] || 0}</span>
-                            <button onclick="updateCart('${p.sku}', 1)" class="w-8 h-8 flex items-center justify-center bg-yellow-400 text-white rounded-full shadow-sm hover:bg-yellow-500">+</button>
+                            <button onclick="updateCart('${p.sku}', 1)" class="w-8 h-8 flex items-center justify-center bg-yellow-400 text-white rounded-full shadow-sm">+</button>
                         </div>
                     </td>
                 </tr>
@@ -161,75 +161,4 @@
             }
             let discount = total >= 10000 ? 0.05 : (total >= 5000 ? 0.03 : 0);
             let final = Math.round(total * (1 - discount));
-            document.getElementById('cart-count').innerText = Object.values(cart).reduce((a, b) => a + b, 0);
-            document.getElementById('total-price').innerText = total + " грн";
-            document.getElementById('final-price').innerText = final + " грн";
-            document.getElementById('discount-info').innerText = discount > 0 ? `🔥 Активовано знижку ${discount*100}%` : "";
-        }
-
-        async function checkout() {
-            const user = JSON.parse(localStorage.getItem('trend_user') || '{}');
-            if (!user.name || !user.phone) { 
-                alert("Будь ласка, заповніть Ім'я та Телефон у кабінеті!"); 
-                toggleCabinet(); 
-                return; 
-            }
-
-            // ТВОЇ ДАНІ БОТА
-            const botToken = '6918546766:AAEWLatU6fz6ITX8OI81Hd6nrMc-jE8u5cU';
-            const chatId = '1246930818'; 
-
-            let msg = `🛒 ТОВАР ПРИЙШОВ! ЗАМОВЛЕННЯ 🚀\n\n`;
-            msg += `👤 Клієнт: ${user.name}\n`;
-            msg += `📞 Тел: ${user.phone}\n`;
-            msg += `--------------------------\n`;
-
-            for (let sku in cart) {
-                const p = products.find(i => i.sku === sku);
-                if (p) {
-                    msg += `🔹 ${p.name}\n   Арт: ${p.sku} | ${cart[sku]} шт. | ${p.price * cart[sku]} грн\n\n`;
-                }
-            }
-            msg += `--------------------------\n`;
-            msg += `💰 РАЗОМ ДО СПЛАТИ: ${document.getElementById('final-price').innerText}\n`;
-            msg += `📉 Знижка вже врахована в сумі.`;
-
-            try {
-                const response = await fetch(`https://api.telegram.org/bot${botToken}/sendMessage`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ chat_id: chatId, text: msg })
-                });
-
-                if (response.ok) {
-                    alert("✅ Замовлення надіслано менеджерам Trend Electro! Ми скоро зв'яжемося з вами.");
-                    cart = {}; 
-                    localStorage.setItem('trend_cart', '{}'); 
-                    updateCartUI(); 
-                    toggleCart();
-                } else { throw new Error(); }
-            } catch (e) {
-                alert("❌ Помилка відправки. Напишіть нам у Telegram напряму.");
-            }
-        }
-
-        document.getElementById('search').addEventListener('input', (e) => {
-            const t = e.target.value.toLowerCase();
-            renderProducts(products.filter(p => p.name.toLowerCase().includes(t) || p.sku.toLowerCase().includes(t)));
-        });
-
-        function saveProfile() {
-            const u = { name: document.getElementById('user-name').value, phone: document.getElementById('user-phone').value };
-            localStorage.setItem('trend_user', JSON.stringify(u));
-            alert("Ваш профіль збережено!"); 
-            toggleCabinet();
-        }
-
-        function loginAdmin() { if (prompt("Вхід для адміна:") === "admin123") document.getElementById('admin-panel').style.display='block'; }
-        function toggleCart() { document.getElementById('cart-modal').classList.toggle('hidden'); }
-        function toggleCabinet() { document.getElementById('cabinet').classList.toggle('hidden'); }
-        
-        window.onload = init;
-    </script>
-</body>
-</html>
+            document.getElementById('cart-count').innerText =
