--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root { --main-bg: #0f172a; --card-bg: #1e293b; --accent: #eab308; }
-        body { background-color: var(--main-bg); color: white; transition: 0.3s; scroll-behavior: smooth; }
+        body { background-color: var(--main-bg); color: white; transition: 0.3s; }
         .product-card { background: var(--card-bg); border-radius: 2rem; border: 1px solid rgba(255,255,255,0.05); transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
         .product-card:hover { transform: translateY(-10px); border-color: var(--accent); box-shadow: 0 20px 40px -20px rgba(234, 179, 8, 0.3); }
         .category-btn { background: rgba(255,255,255,0.05); color: white; border-radius: 99px; padding: 12px 24px; white-space: nowrap; transition: 0.3s; font-size: 14px; font-weight: 700; border: 1px solid rgba(255,255,255,0.1); }
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body class="font-sans">
-
+ 
     <header class="p-6 sticky top-0 z-40 backdrop-blur-xl bg-[#0f172a]/80 border-b border-white/5">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center gap-4">
@@ -37,14 +37,14 @@
             </div>
         </div>
     </header>
-
+ 
     <main class="container mx-auto px-4 pb-20">
         <div class="mt-8 mb-10 relative">
-            <input type="text" id="search" placeholder="Що шукаємо сьогодні?" 
+            <input type="text" id="search" placeholder="Що шукаємо сьогодні? (назва або артикул)" 
                 class="w-full p-6 pl-16 rounded-[2rem] bg-white/5 border border-white/10 focus:ring-4 focus:ring-yellow-500/20 outline-none text-xl transition-all">
             <i class="fas fa-search absolute left-6 top-7 text-yellow-500 text-xl"></i>
         </div>
-
+ 
         <div class="flex gap-3 overflow-x-auto pb-10 no-scrollbar">
             <button onclick="filterCat('all', this)" class="category-btn active">⚡️ ВСЕ</button>
             <button onclick="filterCat('Освітлення', this)" class="category-btn">💡 СВІТЛО</button>
@@ -53,29 +53,34 @@
             <button onclick="filterCat('Модульна автоматика', this)" class="category-btn">🛡️ АВТОМАТИКА</button>
             <button onclick="filterCat('Щити та бокси', this)" class="category-btn">📦 ЩИТИ</button>
         </div>
-
+ 
         <div id="admin-panel" class="hidden bg-gradient-to-br from-yellow-500/20 to-orange-500/5 border-2 border-yellow-500/50 p-8 rounded-[3rem] mb-12">
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                 <div>
-                    <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📉 Знижка (%)</h3>
-                    <input type="number" id="global-discount" onchange="updateSettings()" class="w-full bg-black/40 p-3 rounded-xl border border-white/10">
+                    <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📈 Націнка</h3>
+                    <input type="number" id="markup" value="1.5" step="0.1" onchange="updateSettings()" class="w-full bg-black/40 p-3 rounded-xl mt-1 border border-white/10">
                 </div>
                 <div>
-                    <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📈 Націнка</h3>
-                    <input type="number" id="markup" step="0.1" onchange="updateSettings()" class="w-full bg-black/40 p-3 rounded-xl border border-white/10">
-                </div>
-                <div class="flex flex-col justify-end">
-                    <button onclick="localStorage.clear(); location.reload();" class="bg-red-500 text-white p-3 rounded-xl font-bold">Скинути ВСЕ</button>
+                    <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📉 Знижка (%)</h3>
+                    <input type="number" id="global-discount" value="0" onchange="updateSettings()" class="w-full bg-black/40 p-3 rounded-xl mt-1 border border-white/10">
                 </div>
             </div>
         </div>
-
+ 
         <div id="loading" class="py-20 text-center"><i class="fas fa-circle-notch fa-spin text-4xl text-yellow-500"></i></div>
         <div id="product-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-8"></div>
     </main>
-
-    <div id="wheel-container">
-        <div class="text-center bg-gray-900 p-10 rounded-[3rem] border border-yellow-500/30 relative">
-            <h2 class="text-3xl font-black text-yellow-500 mb-2 italic">LUCKY WHEEL</h2>
-            <div class="wheel mx-auto my-8" id="main-wheel">
-                <div class="wheel-part bg-
+ 
+    <div id="cart-modal" class="hidden fixed inset-0 bg-black/95 backdrop-blur-2xl z-[100] p-4 flex items-center justify-center">
+        <div class="w-full max-w-2xl bg-[#1e293b] rounded-[3rem] p-10 border border-white/10 flex flex-col max-h-[90vh]">
+            <div class="flex justify-between items-center mb-8">
+                <h2 class="text-3xl font-black text-yellow-500 italic uppercase">КОШИК</h2>
+                <button onclick="toggleCart()" class="text-4xl opacity-30">×</button>
+            </div>
+            <div id="cart-items" class="flex-grow overflow-y-auto space-y-4 no-scrollbar"></div>
+            <div class="mt-8 pt-8 border-t border-white/5">
+                <div class="flex justify-between items-end mb-8">
+                    <span class="text-sm font-bold opacity-40 uppercase">Разом:</span>
+                    <span id="final-price" class="text-5xl font-black text-yellow-500">0 грн</span>
+                </div>
+                <button onclick="checkout()" class="w-full bg-yellow-500 text-black py-6 rounded-[2rem
