--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trend Electro</title>
+    <title>E-Shop Premium</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -22,7 +22,7 @@
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center gap-4">
                 <div class="bg-yellow-500 text-black w-12 h-12 rounded-2xl flex items-center justify-center shadow-lg shadow-yellow-500/40 rotate-3"><i class="fas fa-bolt text-2xl"></i></div>
-                <h1 class="text-3xl font-black uppercase tracking-tighter italic">Trend <span class="text-yellow-500">Electro</span></h1>
+                <h1 class="text-3xl font-black uppercase tracking-tighter italic text-white">Premium <span class="text-yellow-500">Shop</span></h1>
             </div>
             <div class="flex gap-4">
                 <button onclick="loginAdmin()" class="bg-white/5 w-12 h-12 rounded-full hover:bg-white/10 transition"><i class="fas fa-user-shield text-yellow-500"></i></button>
@@ -54,11 +54,11 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
                     <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📈 Націнка</h3>
-                    <input type="number" id="markup" step="0.1" onchange="updateSettings()" class="w-full bg-black/40 p-4 rounded-2xl outline-none border border-white/10 text-white font-bold">
+                    <input type="number" id="markup" step="0.1" onchange="updateSettings()" class="w-full bg-black/40 p-4 rounded-2xl border border-white/10 outline-none">
                 </div>
                 <div>
                     <h3 class="font-black text-yellow-500 uppercase mb-4 tracking-widest">📉 Знижка (%)</h3>
-                    <input type="number" id="global-discount" onchange="updateSettings()" class="w-full bg-black/40 p-4 rounded-2xl outline-none border border-white/10 text-white font-bold">
+                    <input type="number" id="global-discount" onchange="updateSettings()" class="w-full bg-black/40 p-4 rounded-2xl border border-white/10 outline-none">
                 </div>
             </div>
         </div>
@@ -71,15 +71,15 @@
         <div class="w-full max-w-2xl bg-[#1e293b] rounded-[3rem] p-10 border border-white/10 flex flex-col max-h-[90vh]">
             <div class="flex justify-between items-center mb-8">
                 <h2 class="text-3xl font-black text-yellow-500 italic uppercase">Кошик</h2>
-                <button onclick="toggleCart()" class="text-4xl opacity-30 transition">×</button>
+                <button onclick="toggleCart()" class="text-4xl opacity-30">×</button>
             </div>
             <div id="cart-items" class="flex-grow overflow-y-auto space-y-4 pr-2"></div>
             <div class="mt-8 pt-8 border-t border-white/5">
                 <div class="flex justify-between items-end mb-8">
-                    <span class="text-sm font-bold opacity-40 uppercase tracking-widest">Загальна сума:</span>
-                    <span id="final-price" class="text-5xl font-black text-yellow-500 tracking-tighter">0 грн</span>
+                    <span class="text-sm font-bold opacity-40 uppercase tracking-widest">Разом:</span>
+                    <span id="final-price" class="text-5xl font-black text-yellow-500">0 грн</span>
                 </div>
-                <button onclick="checkout()" class="w-full bg-yellow-500 text-black py-6 rounded-[2rem] font-black text-2xl uppercase italic tracking-widest">Оформити замовлення</button>
+                <button onclick="checkout()" class="w-full bg-yellow-500 text-black py-6 rounded-[2rem] font-black text-2xl uppercase italic">Оформити</button>
             </div>
         </div>
     </div>
@@ -88,119 +88,3 @@
         let products = [];
         let cart = JSON.parse(localStorage.getItem('trend_cart') || '{}');
         let settings = JSON.parse(localStorage.getItem('trend_settings') || '{"discount": 0, "markup": 1.5}');
-        let currentCat = 'all';
- 
-        async function init() {
-            try {
-                const res = await fetch('data.csv?v=' + Date.now());
-                const text = await res.text();
-                const lines = text.split('\n');
-                
-                products = lines.slice(1).map(line => {
-                    const parts = line.split(',');
-                    if (parts.length < 2) return null;
-                    const sku = parts[0].trim();
-                    const rawPrice = parseFloat(parts[parts.length - 1]);
-                    const name = parts.slice(1, -1).join(',').replace(/"/g, '').trim();
-                    if (!sku || isNaN(rawPrice)) return null;
-                    
-                    let price = Math.round(rawPrice * settings.markup);
-                    if (settings.discount > 0) price = Math.round(price * (1 - settings.discount / 100));
- 
-                    return { sku, name, price, cat: detectCat(name) };
-                }).filter(p => p !== null);
- 
-                document.getElementById('loading').classList.add('hidden');
-                document.getElementById('global-discount').value = settings.discount;
-                document.getElementById('markup').value = settings.markup;
-                render();
-            } catch (e) { console.error(e); }
-        }
- 
-        function detectCat(name) {
-            const n = name.toLowerCase();
-            if (n.includes('лампа') || n.includes('led') || n.includes('світл')) return 'Освітлення';
-            if (n.includes('кабель') || n.includes('провід')) return 'Кабель та Провід';
-            if (n.includes('розетка')) return 'Розетки та Вимикачі';
-            if (n.includes('автомат')) return 'Модульна автоматика';
-            return 'Інше';
-        }
- 
-        function render() {
-            const list = document.getElementById('product-list');
-            const term = document.getElementById('search').value.toLowerCase();
-            const filtered = products.filter(p => (p.name.toLowerCase().includes(term) || p.sku.toLowerCase().includes(term)) && (currentCat === 'all' || p.cat === currentCat));
- 
-            list.innerHTML = filtered.map(p => `
-                <div class="product-card p-6 flex flex-col gap-6">
-                    <div class="relative rounded-[2rem] bg-white aspect-square overflow-hidden flex items-center justify-center">
-                        <img src="img/${p.sku}.jpg" onerror="this.src='https://via.placeholder.com/400'" class="w-full h-full object-contain p-6">
-                    </div>
-                    <div class="flex-grow"><h3 class="font-black text-lg leading-tight line-clamp-2">${p.name}</h3></div>
-                    <div class="flex justify-between items-center bg-black/20 rounded-3xl p-3">
-                        <span class="text-2xl font-black text-yellow-500 tracking-tighter ml-2">${p.price} <small class="text-xs">грн</small></span>
-                        <div class="flex items-center gap-3">
-                            <button onclick="updateCart('${p.sku}', -1)" class="w-10 h-10 rounded-full bg-white/5 text-white">-</button>
-                            <span class="font-black text-white w-4 text-center">${cart[p.sku] || 0}</span>
-                            <button onclick="updateCart('${p.sku}', 1)" class="w-12 h-12 bg-yellow-500 text-black rounded-2xl font-black">+</button>
-                        </div>
-                    </div>
-                </div>
-            `).join('');
-            document.getElementById('cart-count').innerText = Object.values(cart).reduce((a,b) => a+b, 0);
-        }
- 
-        function updateCart(sku, d) {
-            cart[sku] = (cart[sku] || 0) + d;
-            if (cart[sku] <= 0) delete cart[sku];
-            localStorage.setItem('trend_cart', JSON.stringify(cart));
-            render();
-            updateCartUI();
-        }
- 
-        function updateCartUI() {
-            const cont = document.getElementById('cart-items');
-            let total = 0; cont.innerHTML = '';
-            for (let sku in cart) {
-                const p = products.find(i => i.sku === sku);
-                if (!p) continue;
-                total += p.price * cart[sku];
-                cont.innerHTML += `<div class="flex items-center gap-4 bg-white/5 p-4 rounded-3xl border border-white/5"><div class="flex-grow"><p class="font-black text-sm uppercase">${p.name}</p></div><p class="font-black text-xl">${p.price * cart[sku]} грн</p></div>`;
-            }
-            document.getElementById('final-price').innerText = total + " грн";
-        }
- 
-        async function checkout() {
-            if(Object.keys(cart).length === 0) return;
-            let msg = `🛒 ЗАМОВЛЕННЯ:\n\n`;
-            for (let sku in cart) {
-                const p = products.find(i => i.sku === sku);
-                msg += `▪️ ${p.name} (${cart[sku]} шт)\n`;
-            }
-            msg += `\n💰 РАЗОМ: ${document.getElementById('final-price').innerText}`;
-            await fetch(`https://api.telegram.org/bot6918546766:AAEWLatU6fz6ITX8OI81Hd6nrMc-jE8u5cU/sendMessage?chat_id=1246930818&text=${encodeURIComponent(msg)}`);
-            alert("Замовлення надіслано!");
-            cart = {}; localStorage.removeItem('trend_cart'); location.reload();
-        }
- 
-        function filterCat(cat, btn) {
-            currentCat = cat;
-            document.querySelectorAll('.category-btn').forEach(b => b.classList.remove('active'));
-            btn.classList.add('active');
-            render();
-        }
- 
-        function updateSettings() {
-            settings.discount = document.getElementById('global-discount').value;
-            settings.markup = document.getElementById('markup').value;
-            localStorage.setItem('trend_settings', JSON.stringify(settings));
-            init(); 
-        }
- 
-        function loginAdmin() { if(prompt("Ключ:") === "admin123") document.getElementById('admin-panel').classList.toggle('hidden'); }
-        function toggleCart() { document.getElementById('cart-modal').classList.toggle('hidden'); updateCartUI(); }
-        document.getElementById('search').oninput = render;
-        window.onload = init;
-    </script>
-</body>
-</html>
